<resources>
    <string name="app_name">My Movies</string>
    <string name="action_settings">Settings</string>
    <string name="search_title_empty">Required field</string>
    <string name="search_year_wrong">Year is not valid</string>
    <string name="activity_search_title">Results</string>
    <string name="activity_add_title">Add Movies</string>

    <string name="search_no_movies">No movies were found.</string>
    <string name="search_error">There was an error while searching.</string>
    <string name="search_saving">Saving movies</string>
    <string name="search_save_nothing">Nothing to save!</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>

    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="runtime">Length</string>
    <string name="runtime_min">min</string>
    <string name="imdb">imdb</string>
    <string name="metascore">metascore</string>
    <string name="user_rating">your</string>
    <string name="personal">personal</string>
    <string name="language">Language</string>
    <string name="rated">Rated</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>
    <string name="comment">Comment</string>
    <string name="no_comment">You haven\'t written a comment yet. Touch here to enter comment.</string>
    <string name="search">Search</string>
    <string name="search_wrong_input">Wrong input!</string>
    <string name="search_no_movie">No movies found!</string>
    <string name="search_movie_exists">Movie already added!</string>
    <string name="search_no_internet">No internet connection!</string>
    <string name="search_no_poster">Couldn\'t download poster!</string>
    <string name="search_instructions">Enter the name of the movie and year (optional, but helps find a better match), then press Search.</string>
    <string name="no_movies">There are no movies in your collection.\nClick the Add Movie button in the top right corner.</string>
    <string name="movie_save">Save</string>
    <string name="movie_delete">Delete</string>
    <string name="movie_delete_dialog_message">Do you really want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_local_prompt">Choose genre</string>
    <string name="country">Country</string>
    <string name="writer">Writers</string>
    <string name="search_hint">Words in title or empty for all</string>
    <string name="movie_cancel">Cancel</string>
    <string name="no_movies_message">There are currently no movies in you collection.</string>
    <string name="filter_all">All</string>
    <string name="filter_seen">Seen</string>
    <string name="filter_not_seen">Not seen</string>
    <string-array name="genres">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>

    </string-array>
</resources>
