<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/movies_list_no_movies_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_movies_message"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/text_large"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/movie_list_bottom_toolbar_watched_radio"
        android:background="@android:color/transparent"
        android:scrollbars="vertical" />


    <RadioGroup
        android:id="@+id/movie_list_bottom_toolbar_watched_radio"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_toolbar_height"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/space_side_normal"
        android:background="@color/colorPrimary"
        android:checkedButton="@+id/movie_list_bottom_toolbar_watched_radio_1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/movie_list_bottom_toolbar_watched_radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/movie_list_bottom_toolbar_watched_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_side_normal"
            android:text="@string/filter_seen"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/movie_list_bottom_toolbar_watched_radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_side_normal"
            android:text="@string/filter_not_seen"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RadioGroup>

</RelativeLayout>
