<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.landomen.mymovies.search.AddActivity">

    <RelativeLayout
        android:id="@+id/add_movie_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/add_movie_title_edit_text"
            android:layout_width="@dimen/edit_text_width_normal"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/add_movie_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_movie_title_edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/add_movie_year_edit_text"
            android:layout_width="@dimen/edit_text_width_normal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_movie_title_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_padding"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_large" />

        <TextView
            android:id="@+id/add_movie_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_movie_year_edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/year"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/add_movie_search_button"
            style="@style/BasicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_movie_year_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_side_normal"
            android:onClick="onSearch"
            android:text="@string/search" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/add_movie_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
